# rsy-scribe

./: CHANGELOG.md  Cargo.toml  README.md  icon.toml  icons.toml  theme.toml
app/: Cargo.toml
app/src/: application.rs  main.rs
src/: application.rs  commands.rs  compositor.rs  custom_event.rs  editor.rs  keymap.rs  main.rs  syapi.rs  view.rs
src/application/: editor.rs
src/commands/: common.rs  typed.rs
src/compositor/: searchBox.rs
src/keymap/: default.rs  keyboard.rs  macros.rs
src/syapi/: document.rs  domain.rs
syservice/: Cargo.toml
syservice/resources/: template.sy
syservice/src/: document.rs  domain.rs  file.rs  handler.rs  lib.rs  lute.rs  test_utils.rs
syservice/src/lute/: delimiter.rs  lexer.rs  node.rs  parse.rs
tui/: Cargo.toml
tui/src/: component.rs  compositor.rs  editor.rs  job.rs  lib.rs  model.rs  searchbox.rs  status.rs  uiconfig.rs
tui/src/component/: block.rs  component_editor.rs  component_search_box.rs  editor.rs  gutter.rs  scroll.rs  search_box.rs
tui/src/component/block/: doc.rs  header.rs
tui/src/component/search_box/: search_box_debounce.rs
tui/src/model/: document_model.rs  editor_model.rs  utils.rs
tui/src/uiconfig/: icons.rs  styles.rs  theme.rs
tui/tests/: common.rs  parse_node_test.rs
view/: Cargo.toml
view/src/: editor.rs  lib.rs
