[package]
name = "kilo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
term = []
# default = ["term"]

[dependencies]
crossterm = "0.27.0"
ropey = "1.6.1"
ratatui = "0.26"
anyhow = "1"
arc-swap = "1.7.1"
bitflags = "2.5"
unicode-width = "0.1"
serde = { version = "1", features = ["derive"] }

tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
serde_json = "1.0.132"
