[package]
name = "tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
syservice = {path="../syservice"}
crossterm = "0.27.0"
ropey = "1.6.1"
ratatui = "0.26"
unicode-width = "0.2.0"
tokio = { version = "1.41.0", features = ["full"] }
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
anyhow = "1.0.97"
log = "0.4.27"
once_cell = "1.21.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
futures-executor = "0.3.31"
csscolorparser = "0.7"
thiserror = "2.0.12"
lazy_static = "1.5.0"
serde_json = "1.0.132"
